tests/js/invalid/when/mismatched-types-1.buri
x: #red | #green = #red
result = when x is
    #red do 1
    _ do "hello"